fix(query): preserve insertion order in AggregateRow.asMap (Map.copyOf does not)